<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    android:paddingLeft="?attr/dialogPreferredPadding"
    android:paddingRight="?attr/dialogPreferredPadding"
    android:paddingTop="@dimen/abc_dialog_padding_top_material">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_nl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/b_as"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/item_feedback_text_0"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/itemfeedbackTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_feedback_text_1"
            android:visibility="invisible" />

        <CheckBox
            android:id="@+id/itemfeedbackCheckBox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemfeedbackTextView1"
            android:text="@string/item_feedback_text_2"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/itemfeedbackCheckBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemfeedbackCheckBox1"
            android:text="@string/item_feedback_text_3" />

        <TextView
            android:id="@+id/itemfeedbackTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemfeedbackCheckBox2"
            android:layout_marginTop="6dp"
            android:text="@string/item_feedback_text_4" />

        <CheckBox
            android:id="@+id/itemfeedbackCheckBox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemfeedbackTextView2"
            android:text="@string/item_feedback_text_5" />

    </RelativeLayout>

</LinearLayout>
