<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="?attr/dialogPreferredPadding"
    android:paddingRight="?attr/dialogPreferredPadding"
    android:paddingTop="@dimen/abc_dialog_padding_top_material">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4dp"
        android:text="1.三星设备使用此功能需谨慎使用！\n2.请检查值是否为空\n3.推荐1080x222o" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/eootb2_text_1" />

        <EditText
            android:id="@+id/styt11"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="phone"
            android:text="@string/eootb2_text_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/eootb2_text_3" />

        <EditText
            android:id="@+id/styt333"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="phone"
            android:text="@string/eootb2_text_4" />
    </LinearLayout>


</LinearLayout>

