<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="?attr/dialogPreferredPadding"
    android:paddingRight="?attr/dialogPreferredPadding"
    android:paddingTop="@dimen/abc_dialog_padding_top_material">

    <TextView
        android:id="@+id/lxw_id_push_helps_comm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chose__text_0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/chose__text_1"
        android:textSize="11sp" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/lxw_id_push_helps_c_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:gravity="center_vertical"
        android:text="@string/chose__text_2" />
</LinearLayout>