<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/axpLinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/axLinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/axEditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/a_xp_hint_text_0"
                android:maxLength="80" />

            <EditText
                android:id="@+id/axEditText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/a_xp_hint_text_1"
                android:maxLength="80" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/axButton1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:text="@string/a_xp_text_2" />

            <Button
                android:id="@+id/axButton2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:text="@string/a_xp_text_3" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/axpLinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/axpEditText1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="#20000000"
            android:gravity="top|left" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <Button
                android:id="@+id/axpButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:text="@string/a_xp_text_4" />

            <Button
                android:id="@+id/axpButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/axpButton1"
                android:text="@string/a_xp_text_5" />

        </RelativeLayout>

        <TextView
            android:id="@+id/axpTextView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0" />

    </LinearLayout>

</LinearLayout>

