<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <nico.styTool.CircleImageView
            android:id="@+id/lxw_id_item_message_comment_userimg"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/github" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/lxw_id_item_message_comment_userimg"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lxw_id_item_message_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lxw_item_message_text_0" />

                <TextView
                    android:id="@+id/lxw_id_item_message_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/lxw_item_message_text_1" />
            </RelativeLayout>


            <TextView
                android:id="@+id/lxw_id_item_message_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lxw_item_message_text_2" />

            <TextView
                android:id="@+id/lxw_id_item_message_createtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/lxw_item_message_text_3" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>